# opendms

./: .gitignore  CMakeLists.txt  Dockerfile.txt  cfg.json  readme.md  run-docker.sh
.githooks/: pre-commit  pre-push
cmake/: lint.cmake
data/: 4.yml  close_eyes.yml
examples/cpp_example/: CMakeLists.txt  FrameSource.cpp  FrameSource.hpp  demo.cpp  visulizer.cpp  visulizer.hpp
include/: FaceData.hpp  Frame.hpp  api.hpp  error_code.hpp
models/eye_landmark_detector/: checkpoint-epoch50.pth.onnx.mnn  checkpoint-epoch6.pth.onnx  checkpoint-epoch6.pth.onnx.mnn  model_best.pth.onnx  model_best.pth.onnx.mnn
scripts/: convert_onnx_to_mnn.sh  sync_to_pi.sh  video_recorder.py
src/: api.cpp  includes.hpp  main.cpp  test_spdlog.cpp
src/basic/: Distraction.cpp  Distraction.hpp  EyeLandmarkDetector.cpp  EyeLandmarkDetector.hpp  FaceDetector.cpp  FaceDetector.hpp  FaceLandmarkDetector.cpp  FaceLandmarkDetector.hpp  FaceTracker.cpp  FaceTracker.hpp  Fatigue.cpp  Fatigue.hpp  Frame.hpp  Pipeline.cpp  Pipeline.hpp
src/ui/: visulizer.cpp  visulizer.hpp
src/utils/: AutoTime.cpp  AutoTime.hpp  FrameSource.cpp  FrameSource.hpp  common_utils.cpp  common_utils.hpp
test/: CMakeLists.txt  test.cpp  test_EyeLandmarkDetector.cpp  test_faceLandmarkDetector.cpp  test_face_detector.cpp  test_utils.cpp  test_utils.hpp
tools/: lint.py
